fix unsupported list type sorting